--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -28,6 +28,10 @@ header {
     @include breakpoint-up('tiny') {
 
         flex-direction: column;
+
+        h1 {
+            width: auto;
+        }
     }
 
     @include breakpoint-up('small') {
